# crewai-projects

./: launch.json  requirements.txt  test.txt  teste.ipynb
.cache/41/: cache.db
.cache/42/: cache.db
.chainlit/: config.toml
.devcontainer/: devcontainer.json
backend_generator/: pyproject.toml  requirements.txt
backend_generator/src/backend_generator/: crew.py  crew_2.py  main.py  main_v2.py
backend_generator/src/backend_generator/config/: agents.yaml  tasks.yaml
backend_generator/src/backend_generator/tools/: custom_tool.py
busca_cnpjs/: pyproject.toml
busca_cnpjs/src/busca_cnpjs/: crew.py  main.py  main_2.py  streamlit_custom.py
busca_cnpjs/src/busca_cnpjs/config/: agents.yaml  tasks.yaml
busca_cnpjs/src/busca_cnpjs/tools/: custom_tool.py
busca_cnpjs/src/busca_cnpjs_chainlit/: crew.py  main.py  streamlit_main.py
busca_cnpjs/src/busca_cnpjs_chainlit/config/: agents.yaml  tasks.yaml
busca_cnpjs/src/busca_cnpjs_chainlit/tools/: custom_tool.py
busca_cnpjs/src/swarm/: main.py
gamma_app/: README.md  linkedin.md  pyproject.toml
gamma_app/src/gamma_app/: crew.py  main.py
gamma_app/src/gamma_app/config/: agents.yaml  tasks.yaml
linkedin/: pyproject.toml
linkedin/src/: linkedin.md
linkedin/src/linkedin/: crew.py  main.py
linkedin/src/linkedin/config/: agents.yaml  tasks.yaml
obsidian_mindmap/: pyproject.toml
obsidian_mindmap/src/obsidian_mindmap/: crew.py  main.py
obsidian_mindmap/src/obsidian_mindmap/config/: agents.yaml  tasks.yaml
obsidian_mindmap/src/obsidian_mindmap/tools/: custom_tool.py
taiane_viagens/: pyproject.toml  report.md  training_data.pkl
taiane_viagens/src/taiane_viagens/: Dockerfile  crew.py  main.py  requirements.txt
taiane_viagens/src/taiane_viagens/config/: agents.yaml  tasks.yaml
taiane_viagens/src/taiane_viagens/tools/: custom_tool.py
