[tool.poetry]
name = "backend_generator"
version = "0.1.0"
description = "backend_generator using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
backend_generator = "backend_generator.main:run"
run_crew = "backend_generator.main:run"
train = "backend_generator.main:train"
replay = "backend_generator.main:replay"
test = "backend_generator.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
