[tool.poetry]
name = "obsidian_mindmap"
version = "0.1.0"
description = "obsidian_mindmap using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
obsidian_mindmap = "obsidian_mindmap.main:run"
run_crew = "obsidian_mindmap.main:run"
train = "obsidian_mindmap.main:train"
replay = "obsidian_mindmap.main:replay"
test = "obsidian_mindmap.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
